--- a/app/pom.xml
+++ b/app/pom.xml
@@ -5,18 +5,11 @@
     <parent>
         <artifactId>security</artifactId>
         <groupId>com.donaldy</groupId>
-        <version>1.0-SNAPSH</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>app</artifactId>
-    
-    <dependencies>
-        <dependency>
-            <groupId>com.donaldy</groupId>
-            <artifactId>core</artifactId>
-        </dependency>
-    </dependencies>
 
 
 </project>
