--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,14 @@
     <groupId>com.donaldy</groupId>
     <artifactId>security</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSH</version>
-    
+    <version>1.0-SNAPSHOT</version>
     
     <modules>
         <module>core</module>
-        <module>app</module>
         <module>web</module>
-        <module>demo</module>
+        <module>app</module>
     </modules>
-    
+
     <dependencyManagement>
         <dependencies>
 
@@ -29,31 +27,16 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Dalston.SR5</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.0.3.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            
-            
+
+
         </dependencies>
     </dependencyManagement>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 
 </project>
