--- a/app/pom.xml
+++ b/app/pom.xml
@@ -10,6 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>app</artifactId>
+    
+    <dependencies>
+        <dependency>
+            <groupId>com.donaldy</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        
+    </dependencies>
 
 
 </project>
