--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
         <module>web</module>
         <module>app</module>
     </modules>
+    
+    <properties>
+        <security.version>1.0.0-SNAPSHOT</security.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
