--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,6 +10,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>web</artifactId>
+    
+    <dependencies>
+        <dependency>
+            <groupId>com.donaldy</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+    </dependencies>
 
 
 </project>
